--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "student-management",
+  "homepage": "https://bniedermeyer.github.io/student-management",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +18,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "json-server": "json-server db.json -p 3300"
+    "json-server": "json-server db.json -p 3300",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "json-server": "^0.15.1"
   }
 }
