--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   },
   "devDependencies": {
     "gh-pages": "^2.2.0",
-    "json-server": "^0.15.1"
+    "jest-fetch-mock": "^3.0.1",
+    "json-server": "^0.15.1",
+    "react-test-renderer": "^16.12.0"
   }
 }
